testsuite/tests/tlks/should_fail/tlks_fail002.hs
{-# LANGUAGE TopLevelKindSignatures #-}

module TLKS_Fail002 where

import Data.Kind (Type)

data D

type D :: Type
type D :: Type
type D :: Type
